--- a/.devfile.yaml
+++ b/.devfile.yaml
@@ -1,7 +1,7 @@
 ---
 schemaVersion: 2.2.0
 metadata:
-  name: test
+  name: ansible-role-molecule-test
   displayName: Ansible Role Molecule Test
   description: Ansible Role for testing with Molecule 
   version: 0.0.0
