Fixed molecule and updated tox configuration

--- a/tox.ini
+++ b/tox.ini
@@ -1,21 +1,33 @@
 [tox]
-minversion = 4.2.4
-envlist = py{39,310,311}-ansible{7,8,9}
+min_version = 4.0
+env_list = lint, py{3.10,3.11,3.12}-{2.16,2.17}
 skipsdist = true
 
-[testenv]
-commands = molecule test
+[testenv:lint]
+commands =
+    ansible --version
+    yamllint -c=.yamllint .
+    ansible-lint
+    ansible-later
 deps =
-    ansible7: ansible == 7.*
-    ansible8: ansible == 8.*
-    ansible9: ansible == 9.*
-    molecule-plugins[podman]
-    podman >= 4.0.0
     yamllint >= 1.0.0
-    ansible-lint  >= 6.0.0
-    ansible-later >= 3.0.0
+    ansible-lint  >= 24.0.0
+    ansible-later >= 4.0.0
 
-setenv =
+[testenv]
+commands =
+    molecule test
+deps =
+    ; https://docs.ansible.com/ansible/latest/reference_appendices/release_and_maintenance.html#ansible-community-changelogs
+    2.16: ansible-core == 2.16.*
+    2.17: ansible-core == 2.17.*
+    2.18: ansible-core == 2.18.*
+
+    molecule >= 24.0.0
+    molecule-plugins[podman]
+    podman >= 5.0.0
+
+set_env =
     TOX_ENVNAME={envname}
     HOME={homedir:{env:HOME}}
     PY_COLORS=1
@@ -26,5 +38,6 @@ setenv =
     ANSIBLE_VERBOSITY=1
     MOLECULE_NO_LOG=0
     PIP_DISABLE_PIP_VERSION_CHECK=1
+    VIRTUALENV_DISCOVERY=pyenv
 
-passenv = MOLECULE_DISTRO
+pass_env = MOLECULE_DISTRO
