--- a/.github/workflows/todo.yml
+++ b/.github/workflows/todo.yml
@@ -6,11 +6,11 @@ on:
 
 jobs:
   build:
-    runs-on: "ubuntu-20.04"
+    runs-on: ubuntu-latest
     steps:
       - uses: "actions/checkout@master"
       - name: "TODO to Issue"
-        uses: "alstr/todo-to-issue-action@v2.3"
+        uses: "alstr/todo-to-issue-action@v4"
         id: "todo"
         with:
           TOKEN: ${{ secrets.GITHUB_TOKEN }}
