--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,22 +1,27 @@
 ---
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.4.0
+    rev: v4.6.0
     hooks:
       - id: trailing-whitespace
       - id: end-of-file-fixer
       - id: check-added-large-files
 
   - repo: https://github.com/adrienverge/yamllint
-    rev: v1.32.0
+    rev: v1.35.1
     hooks:
       - id: yamllint
         args: [-c=.yamllint]
 
   - repo: https://github.com/ansible-community/ansible-lint
-    rev: v6.17.2
+    rev: v24.7.0
     hooks:
       - id: ansible-lint
+
+  - repo: https://github.com/thegeeklab/ansible-later
+    rev: v4.0.7
+    hooks:
+      - id: ansible-later
 
   - repo: https://github.com/robertdebock/pre-commit
     rev: v1.5.2
