--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,21 +1,36 @@
 ---
 # tasks file for molecule_test
 
+- name: Gather facts
+  ansible.builtin.setup:
+    filter:
+      - ansible_service_mgr
+
+- name: Print init system name
+  ansible.builtin.debug:
+    var: ansible_service_mgr
+  changed_when: false
+
 - name: Gather OS info
   ansible.builtin.setup:
-    filter: ansible_os_family
+    filter:
+      - ansible_os_family
 
 - name: Include vars based on OS family {{ ansible_facts['os_family'] }}
   ansible.builtin.include_vars:
     file: "{{ ansible_facts['os_family'] }}.yml"
 
 - name: Install package {{ molecule_test_httpd_package }}
+  become: true
+  become_user: root
   ansible.builtin.package:
     name: "{{ molecule_test_httpd_package }}"
     state: present
   notify: restart_webserver
 
 - name: Copy content
+  become: true
+  become_user: root
   ansible.builtin.copy:
     content: "{{ molecule_test_webpage_content }}"
     dest: "{{ molecule_test_httpd_dir }}/index.html"
